Closed
Bug 121253
Opened 24 years ago
Closed 23 years ago
need to port gtkmozembed to gtk2
Categories
(Core Graveyard :: Embedding: GTK Widget, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: blizzard, Assigned: blizzard)
References
Details
Attachments
(1 file, 4 obsolete files)
|
33.08 KB,
patch
|
pavlov
:
review+
bryner
:
superreview+
|
Details | Diff | Splinter Review |
Need to port gtkmozembed to gtk2.
Comment 1•24 years ago
|
||
| Assignee | ||
Comment 2•24 years ago
|
||
Just FYI, I do have a building copy as well in a local tree that is a lot
cleaner than that patch. I just need finish it up. It will happen in the next
week to week and a half.
Comment 3•24 years ago
|
||
How is the port doing?
Comment 4•23 years ago
|
||
Chris, any chance to get your patches in for mozilla 1.2 ?
That code, along with bug 144212 patch, appear to work already very well. No
crashes neither critical issues.
Chris:
I recall that you have patch for it, any plan to upload that here? thanks.
-Jay
| Assignee | ||
Comment 6•23 years ago
|
||
I should have something to upload by the end of the day. I'm bringing my gtk2
tree back into shape as we speak.
| Assignee | ||
Comment 7•23 years ago
|
||
Still working on this.
| Assignee | ||
Comment 8•23 years ago
|
||
This patch should work and compile with both gtk2 and gtk 1.2, shouldn't cause
any regressions to the 1.2 code. I can't find any obvious problems with the
embedding widget in either port with this patch.
Attachment #69497 -
Attachment is obsolete: true
Comment 9•23 years ago
|
||
Looking at the patch I'd guess the crash reported in bug 144212 is still
happening. I cant test it before Friday though :(
To have a fully functional gtkmozembed we need also to address 162507. (Yeah I
know this is only slightly related to this bug).
Thanks to be working on this !
Comment 10•23 years ago
|
||
I haven't tested the new patch, but bug #156093 probably still happens with this
patch.
Comment 11•23 years ago
|
||
This patch should fix build errors that occur because
nsAccessibilityInterface.cpp is being built even if --disable-accessibility
configuration option is used.
Comment 12•23 years ago
|
||
With the current patch, build fails on TestGtkEmbed because it's being linked
against gtksuperwin, which doesn't exist for gtk2 build; proper ifdefs are
missing from the Makefile.in.
Comment 13•23 years ago
|
||
This patch sets the LIBS depending on whether gtk1 or gtk2 is used. Works at
least with gtk2, but I don't see why it wouldn't work with gtk1 as well.
| Assignee | ||
Comment 14•23 years ago
|
||
Comment on attachment 103966 [details] [diff] [review]
Fix build errors with --disable-accessibility
please open a new bug and put this patch in it since it's not strictly
embedding-related
Comment 15•23 years ago
|
||
The mozilla-gtkmozembed.pc that's generated for gtk2 build also falsely includes
the -lgtksuperwin option. This makes building eg. galeon fail.
Comment 16•23 years ago
|
||
What is happening with this bug? This is by far the most important bug
when it comes to gtk2.
| Assignee | ||
Comment 17•23 years ago
|
||
I'll start working on this again on Thursday when I return from being out of
town at offsite meetings. Relax.
Status: NEW → ASSIGNED
| Assignee | ||
Comment 18•23 years ago
|
||
updated patch
Attachment #103733 -
Attachment is obsolete: true
Attachment #103966 -
Attachment is obsolete: true
Attachment #104007 -
Attachment is obsolete: true
| Assignee | ||
Comment 19•23 years ago
|
||
The latest patch here compiles with gtk2 and gtk1.2 and doesn't seem to cause
any regressions to the 1.2 code. It's also got a couple of other patches rolled
up into it.
| Assignee | ||
Updated•23 years ago
|
Attachment #106446 -
Flags: review?(bryner)
Updated•23 years ago
|
Attachment #106446 -
Flags: review?(bryner) → review+
| Assignee | ||
Updated•23 years ago
|
Attachment #106446 -
Flags: review+
| Assignee | ||
Updated•23 years ago
|
Attachment #106446 -
Flags: superreview?(bryner)
Attachment #106446 -
Flags: review?(pavlov)
Updated•23 years ago
|
Attachment #106446 -
Flags: review+
Updated•23 years ago
|
Attachment #106446 -
Flags: review?(pavlov)
| Assignee | ||
Comment 20•23 years ago
|
||
Comment on attachment 106446 [details] [diff] [review]
patch
I'm going to assume this is sr=bryner as well.
| Assignee | ||
Comment 21•23 years ago
|
||
Checked in. Thanks!
| Assignee | ||
Comment 22•23 years ago
|
||
-> fixed
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•23 years ago
|
Attachment #106446 -
Flags: superreview?(bryner) → superreview+
Updated•14 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•