Bug #121253.  Port embedding widget to gtk2.  r=pavlov, sr=bryner